# ndx-optogenetics

./: CHANGELOG.md  LICENSE.txt  MIGRATION_GUIDE_v0.2.0_to_v0.3.0.md  NEXTSTEPS.md  README.md  pyproject.toml
.github/workflows/: run_all_tests.yml  run_coverage.yml
docs/source/: conf.py  conf_doc_autogen.py  format.rst  index.rst
spec/: ndx-optogenetics.extensions copy.yaml  ndx-optogenetics.extensions.yaml  ndx-optogenetics.namespace.yaml
src/pynwb/ndx_optogenetics/: __init__.py  optogenetics.py
src/pynwb/tests/: test_example_usage.py  test_tetrodeseries.py
src/spec/: create_extension_spec.py
