[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndx-optogenetics"
version = "0.3.0"
authors = [
    { name="Ryan Ly", email="rly@lbl.gov" },
    { name="Horea Christian", email="uni@chymera.eu" },
    { name="Ben Dichter", email="ben.dichter@catalystneuro.com" },
    { name="Paul Adkisson", email="paul.adkisson@catalystneuro.com" },
]
description = "NWB extension to enhance support for optogenetics data and metadata in NWB"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    'NeurodataWithoutBorders',
    'NWB',
    'nwb-extension',
    'ndx-extension',
]
dependencies = [
    "pynwb>=3.1.0",
    "hdmf>=4.1.0",
    "ndx_ophys_devices>=0.3.1",
]

[project.optional-dependencies]
test = [
    "coverage>=7.5.4",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-subtests>=0.12.1",
    "python-dateutil>=2.8.2",
]

docs = [
    "hdmf-docutils>=0.4.7",
]

dev = [
    "black>=24.4.2",
    "codespell>=2.3.0",
    "pre-commit>=3.5.0",
    "ruff>=0.4.10",
    "ndx-optogenetics[docs,test]",
]

# minimum requirements of project dependencies for testing (see .github/workflows/run_all_tests.yml)
min-reqs = [
    "pynwb==3.1.0",
    "hdmf==4.1.0",
    "ndx_ophys_devices==0.3.1",
]

# TODO: add URLs before release
[project.urls]
"Homepage" = "https://github.com/rly/ndx-optogenetics"
# "Documentation" = "https://rly.github.io/ndx-optogenetics/"
"Bug Tracker" = "https://github.com/rly/ndx-optogenetics/issues"
"Discussions" = "https://github.com/rly/ndx-optogenetics/discussions"
"Changelog" = "https://github.com/rly/ndx-optogenetics/blob/main/CHANGELOG.md"

# Include only the source code under `src/pynwb/ndx_optogenetics` and the spec files under `spec`
# in the wheel.
[tool.hatch.build.targets.wheel]
packages = [
    "src/pynwb/ndx_optogenetics",
    "spec"
]

# Rewrite the path to the `spec` directory to `ndx_optogenetics/spec`.
# `ndx_optogenetics/__init__.py` will look there first for the spec files.
# The resulting directory structure within the wheel will be:
# ndx_optogenetics/
# ├── __init__.py
# ├── spec
# └── widgets
[tool.hatch.build.targets.wheel.sources]
"spec" = "ndx_optogenetics/spec"

# The source distribution includes everything in the package except for the `src/matnwb` directory and
# git and github-related files.
[tool.hatch.build.targets.sdist]
exclude = [
    ".git*",
    "src/matnwb",
]

[tool.pytest.ini_options]
# uncomment below to run pytest always with code coverage reporting. NOTE: breakpoints may not work
# addopts = "--cov --cov-report html"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,./docs/_build/*,*.ipynb"

[tool.coverage.run]
branch = true
source = ["ndx_optogenetics"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb|docs/"

[tool.ruff]
lint.select = ["E", "F", "T100", "T201", "T203", "C901"]
lint.ignore = ["E712"]  # ignore suggestion to change np.True_ == True to np.True_ is True
exclude = [
  "docs/source/conf.py",
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"src/pynwb/ndx_optogenetics/__init__.py" = ["E402"]
"src/spec/create_extension_spec.py" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 17
